testdata/invalid/invalid_output_header.pi
> GET https://vg.no/
< NotANumber